usr/src/cmd/rcm_daemon/common/network_rcm.c
@@ -141,7 +141,7 @@ rcm_mod_init(void)
 	cache_head.prev = NULL;
 	cache_tail.prev = &cache_head;
 	cache_tail.next = NULL;
-	(void) mutex_init(&cache_lock, NULL, NULL);
+	(void) mutex_init(&cache_lock, USYNC_THREAD, NULL);
 
 	if ((status = dladm_open(&dld_handle)) != DLADM_STATUS_OK) {
 		rcm_log_message(RCM_WARNING,
